--- a/resources/assets/sass/partak/partaknet.scss
+++ b/resources/assets/sass/partak/partaknet.scss
@@ -25,7 +25,6 @@ html, body {
 .site-wrapper {
   display: flex;
   min-height: 100%;
-  flex-wrap: wrap;
 }
 
 .content-wrapper {
